Fix jumping scroll bug in Aloha plugin

--- a/src/app/projects/components/editorPane/editorPane.less
+++ b/src/app/projects/components/editorPane/editorPane.less
@@ -1,5 +1,10 @@
 editor-pane {
   overflow-y: auto;
+  /**
+   * The following line is REQUIRED to prevent a strange bug in
+   * the Aloha plugin, see https://jira.gentics.com/browse/CL-234
+   */
+  position: inherit !important;
 }
 
 .content-editor-container {
